 * added `transaction_sample_rate` to define a rate with which transactions are sampled ({pull}116[#116])
 * added `error.handled` to indicate if an exception was handled or not ({pull}124[#124]).
 * added `transaction_max_spans` setting to limit the amount of spans that are recorded per transaction ({pull}127[#127])
 * BREAKING: Several settings and APIs have been renamed ({pull}111[#111], {pull}119[#119]):
 ** The decorator for custom instrumentation, `elasticapm.trace`, is now `elasticapm.capture_span`
 ** The setting `traces_send_frequency` has been renamed to `transaction_send_frequency`.
     The name of the analogous environment variable changed from `ELASTIC_APM_TRACES_SEND_FREQ`
     to `ELASTIC_APM_TRANSACTION_SEND_FREQ`
 ** The `app_name` setting has been renamed to `service_name`.
     The name of the analogous environment variable changed from `ELASTIC_APM_APP_NAME`
     to `ELASTIC_APM_SERVICE_NAME`.
 ** `app_name` arguments to API calls in the whole code base changed to `service_name`.
 ** `context.request.url.raw` has been renamed to `context.request.url.full` ({pull}121[#121])

[[release-1.0.0]]
[float]
=== v1.0.0
https://github.com/elastic/apm-agent-python/compare/v1.0.0.dev3\...v1.0.0[Check the HEAD diff]

 * added `max-event-queue-length` setting. ({pull}67[#67])
 * changed name that the agent reports itself with to the APM server from `elasticapm-python` to `python`. This aligns the Python agent with other languages. ({pull}104[#104])
 * changed Celery integration to store the task state (e.g. `SUCCESS` or `FAILURE`) in `transaction.result` ({pull}100[#100])
 * added setting to disable SSL certificate verification ({pull}108[#108])
 * BREAKING: renamed `server` configuration variable to `server_url` to better align with other language agents ({pull}105[#105]) 
 * BREAKING: removed the old and unused urllib2-based HTTP transport, and renamed the urllib3 transport ({pull}107[#107])